--- a/angular/app/index.html
+++ b/angular/app/index.html
@@ -33,20 +33,22 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-          <li><a ng-href="#/bugs">Bugs</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
+          <!--<li class="active"><a href="#">Logowanie <span class="sr-only">(current)</span></a></li>-->
+          <!--<li><a ng-href="#/bugs">Rejestracja</a></li>-->
+          <li><a href="#">Projekty <span class="sr-only">(current)</span></a></li>
+          <li class="active"><a ng-href="#/bugs">Błędy</a></li>
+          <!--<li class="dropdown">-->
+            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
+            <!--<ul class="dropdown-menu">-->
+              <!--<li><a href="#">Action</a></li>-->
+              <!--<li><a href="#">Another action</a></li>-->
+              <!--<li><a href="#">Something else here</a></li>-->
+              <!--<li role="separator" class="divider"></li>-->
+              <!--<li><a href="#">Separated link</a></li>-->
+              <!--<li role="separator" class="divider"></li>-->
+              <!--<li><a href="#">One more separated link</a></li>-->
+            <!--</ul>-->
+          <!--</li>-->
         </ul>
       </div>
     </div>
@@ -57,7 +59,7 @@
   <![endif]-->
   <div ui-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+  <div>BugyTrack: wersja <span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -73,11 +75,19 @@
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="bower_components/ui-select/dist/select.min.js"></script>
   <script src="bower_components/ng-flow/dist/ng-flow-standalone.min.js"></script>
+  <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
   <script src="app.js"></script>
   <script src="bug/bug-list.controller.js"></script>
   <script src="bug/create-bug.controller.js"></script>
   <script src="bug/bug-details.controller.js"></script>
+  <script src="project/project.service.js"></script>
+  <script src="bug/bug.service.js"></script>
+  <script src="socket/socket.service.js"></script>
+  <script src="account/auth.service.js"></script>
+  <script src="account/account.service.js"></script>
+  <script src="account/login.controller.js"></script>
+  <script src="account/register.controller.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
