--- a/angular/app/index.html
+++ b/angular/app/index.html
@@ -33,8 +33,8 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <!--<li class="active"><a href="#">Logowanie <span class="sr-only">(current)</span></a></li>-->
-          <!--<li><a ng-href="#/bugs">Rejestracja</a></li>-->
+          <li ui-sref="login"><a href="#">Logowanie</a></li>
+          <li ui-sref="login"><a href="#">Rejestracja</a></li>
           <li><a href="#">Projekty <span class="sr-only">(current)</span></a></li>
           <li class="active"><a ng-href="#/bugs">Błędy</a></li>
           <!--<li class="dropdown">-->
@@ -76,6 +76,8 @@
   <script src="bower_components/ui-select/dist/select.min.js"></script>
   <script src="bower_components/ng-flow/dist/ng-flow-standalone.min.js"></script>
   <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
+  <script src="bower_components/angular-translate/angular-translate.min.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 
   <script src="app.js"></script>
   <script src="bug/bug-list.controller.js"></script>
@@ -84,8 +86,10 @@
   <script src="project/project.service.js"></script>
   <script src="bug/bug.service.js"></script>
   <script src="socket/socket.service.js"></script>
-  <script src="account/auth.service.js"></script>
+  <script src="authorization/auth.service.js"></script>
+  <script src="authorization/authInterceptor.service.js"></script>
   <script src="account/account.service.js"></script>
+  <script src="language/language.service.js"></script>
   <script src="account/login.controller.js"></script>
   <script src="account/register.controller.js"></script>
   <script src="components/version/version.js"></script>
