--- a/angular/app/bug/bug-list.html
+++ b/angular/app/bug/bug-list.html
@@ -1,6 +1,6 @@
 <div style="padding: 0px 10px 100px 10px;">
     <h2>Błędy</h2>
-    <button ui-sref="bugs.create" class="btn btn-primary">Utwórz nowy</button><br/><br/>
+    <button ui-sref="master.bugs.create" class="btn btn-primary">Utwórz nowy</button><br/><br/>
     <div class="table-responsive">
         <table class="table">
             <tr>
