--- a/angular/app/index.html
+++ b/angular/app/index.html
@@ -20,46 +20,10 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">BugyTrack</a>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li ui-sref="login"><a href="#">Logowanie</a></li>
-          <li ui-sref="login"><a href="#">Rejestracja</a></li>
-          <li><a href="#">Projekty <span class="sr-only">(current)</span></a></li>
-          <li class="active"><a ng-href="#/bugs">Błędy</a></li>
-          <!--<li class="dropdown">-->
-            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-            <!--<ul class="dropdown-menu">-->
-              <!--<li><a href="#">Action</a></li>-->
-              <!--<li><a href="#">Another action</a></li>-->
-              <!--<li><a href="#">Something else here</a></li>-->
-              <!--<li role="separator" class="divider"></li>-->
-              <!--<li><a href="#">Separated link</a></li>-->
-              <!--<li role="separator" class="divider"></li>-->
-              <!--<li><a href="#">One more separated link</a></li>-->
-            <!--</ul>-->
-          <!--</li>-->
-        </ul>
-      </div>
+    <div ui-view>
     </div>
-  </nav>
-
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-  <div ui-view></div>
-
-  <div>BugyTrack: wersja <span app-version></span></div>
+    
+  
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -78,6 +42,7 @@
   <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
   <script src="bower_components/angular-translate/angular-translate.min.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
 
   <script src="app.js"></script>
   <script src="bug/bug-list.controller.js"></script>
@@ -89,6 +54,7 @@
   <script src="authorization/auth.service.js"></script>
   <script src="authorization/authInterceptor.service.js"></script>
   <script src="account/account.service.js"></script>
+  <script src="layout/layout.controller.js"></script>
   <script src="language/language.service.js"></script>
   <script src="account/login.controller.js"></script>
   <script src="account/register.controller.js"></script>
