--- a/angular/app/index.html
+++ b/angular/app/index.html
@@ -9,6 +9,7 @@
   <title>My AngularJS App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
@@ -33,6 +34,8 @@
   <!--<script src="bower_components/jquery/dist/jquery.min.js"></script>-->
   <!--<script src="bower_components/select2/dist/js/select2.min.js"></script>-->
 
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -49,6 +52,9 @@
   <script src="bug/create-bug.controller.js"></script>
   <script src="bug/bug-details.controller.js"></script>
   <script src="project/project.service.js"></script>
+  <script src="project/project-list.controller.js"></script>
+  <script src="project/project-details.controller.js"></script>
+  <script src="project/create-project.controller.js"></script>
   <script src="bug/bug.service.js"></script>
   <script src="socket/socket.service.js"></script>
   <script src="authorization/auth.service.js"></script>
@@ -57,6 +63,7 @@
   <script src="layout/layout.controller.js"></script>
   <script src="language/language.service.js"></script>
   <script src="account/login.controller.js"></script>
+  <script src="account/logout.controller.js"></script>
   <script src="account/register.controller.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
